public enum Resetters {
    ANIMATION,
    VELOCITY
}