using System.Collections.Generic;
using UnityEngine;

namespace States {
  public class Wait : State {
    public Wait() {
      behaviors = new List<IStateBehavior>() {

      };

      transitions = new List<IStateTransition>() {

      };
    }
  }
}